--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -1,39 +1,10 @@
 @import url("https://fonts.googleapis.com/css? family=Open+Sans:600");
 
+/* Reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-/* Reset Classes */
-
-:root {
-  --black: rgba(0, 0, 0, 1);
-  --blue-charcoal: rgba(0, 11, 19, 1);
-  --cyan--aqua: rgba(0, 224, 255, 1);
-  --steel-gray: rgba(26, 37, 54, 1);
-  --ebony-clay-2: rgba(30, 42, 59, 1);
-  --ebony-clay: rgba(38, 50, 68, 1);
-  --tuna: rgba(39, 50, 68, 1);
-  --tuna-2: rgba(40, 54, 71, 1);
-  --san-juan: rgba(54, 74, 98, 1);
-  --oxford-blue: rgba(56, 74, 96, 1);
-  --waterloo-: rgba(122, 130, 142, 1);
-  --iron-2: rgba(211, 215, 221, 1);
-  --iron: rgba(212, 215, 221, 1);
-  --purple-pizzazz: rgba(255, 0, 183, 1);
-  --white: rgba(255, 255, 255, 1);
-
-  --font-size-xs: 12px;
-  --font-size-s: 14px;
-  --font-size-m: 15px;
-  --font-size-1: 16px;
-  --font-size-x1: 20px;
-  --font-size-xx1: 22px;
-  --font-size-xxx1: 30px;
-
-  --font-family-open_sans: "Open Sans";
 }
 
 .screen a {
@@ -56,7 +27,7 @@
 
 .screen {
   align-items: flex-start;
-  background-color: var(--white);
+  background-color: rgba(255, 255, 255, 1);
   display: flex;
   height: 740px;
   overflow: hidden;
@@ -66,7 +37,7 @@
 
 .overlap-group10 {
   align-items: flex-end;
-  background-color: var(--ebony-clay);
+  background-color: rgba(38, 50, 68, 1);
   display: flex;
   height: 742px;
   min-width: 1366px;
@@ -75,7 +46,7 @@
 
 .flex-col {
   align-items: center;
-  background-color: var(--ebony-clay-2);
+  background-color:rgba(30, 42, 59, 1);
   display: flex;
   flex-direction: column;
   gap: 10px;
